написала readme.md, добавила теги в сваггер
